--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover{
     transition: .5s width ease;
     letter-spacing: 2px;
 }
-nav, div.hero, div.about__me, div.my__skills{
+nav, div.hero, div.about__me, div.my__skills, div.my_projects{
     padding: 0 115px;
 }
 
@@ -238,4 +238,63 @@ div.orange__line{
     background-color: var(--main-orange);
     height: 4px;
     transform: translateY(-100%);
+}
+
+/* Styles for recent projects */
+
+div.my__projects{
+    padding: 60px 115px;
+}
+div.tags{
+    display: flex;
+    justify-content: center;
+}
+span.tag{
+    padding: 5px 20px;
+    background-color: #3C3B40;
+    margin-right: 1rem;
+    border-radius: 30px;
+    font-size: 14px;
+    font-weight: var(--regular-weight);
+}
+span.active__tag{
+    background-color: var(--main-orange);
+}
+div.projects{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3rem;
+    flex-wrap: wrap;
+}
+div.project{
+    position: relative;
+    margin-top: 1rem;
+}
+
+div.project img{
+    width: 342px;
+    height: 342px;
+}
+div.overlay{
+    background-color: #010206b0;
+    height: 322px;
+    width: 322px;
+    border: 10px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    opacity: 0;
+    transition: .2s opacity ease;
+    position: absolute;
+    top: 0;
+}
+div.overlay a{
+    color: var(--main-yellow);
+    font-weight: var(--medium-weight);
+    font-size: 18px;
+}
+div.project:hover div.overlay{
+    opacity: 1;
 }
