--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover{
     transition: .5s width ease;
     letter-spacing: 2px;
 }
-nav, div.hero, div.about__me, div.my__skills, div.my_projects{
+nav, div.hero, div.about__me, div.my__skills, div.my_projects, div.my__services{
     padding: 0 115px;
 }
 
@@ -297,4 +297,66 @@ div.overlay a{
 }
 div.project:hover div.overlay{
     opacity: 1;
+}
+
+/* Styles for my Services */
+
+div.my__services{
+    padding: 60px 115px;
+}
+div.services__container{
+    display: flex;
+    justify-content: space-between;
+}
+div.icon__container{
+    background-color: #22252E;
+    width: fit-content;
+    /* padding: 1rem; */
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    transform: rotate(45deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon__container i{
+    font-size: 20px;
+    transform: rotate(-45deg);
+    color: var(--main-orange);
+}
+div.service{
+    background-color: var(--secondary-black);
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem 2rem;
+    border-bottom: 2px solid var(--secondary-black);
+}
+div.service:hover{
+    border-bottom: 2px solid var(--main-orange);
+}
+div.service:hover .icon__container{
+    background-color: var(--main-orange);
+}
+div.service:hover .icon__container i{
+    color: var(--white);
+}
+div.service p {
+    text-align: center;
+    font-size: 14px;
+    color: var(--gray-text);
+    letter-spacing: 2px;
+}
+div.service h2{
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 1.5;
+    margin: 2rem 0;
+}
+
+@media screen {
+    
 }
