--- a/css/home.css
+++ b/css/home.css
@@ -1,90 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Teko:wght@300;400;500;600;700&display=swap');
-:root{
-    --black-bg-color: #010206;
-    --main-orange: #F55322;
-    --white: #fff;
-    --semi-bold: 600;
-    --medium-weight: 500;
-    --regular-weight: 400;
-    --secondary-black: #11141B;
-    --main-yellow: #FFC208;
-    --gray-text: #C3C3C3;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
-html{
-    scroll-behavior: smooth;
-}
-body{
-    background-color: var(--black-bg-color);
-    font-family: Rubik, sans-serif;
-    color: var(--white);
-}
-a{
-    text-decoration: none;
-    color: white;
-    font-size: 14px;
-    transition: .3s all ease;
-}
-a:hover{
-    color: #F55322;
-}
-.fa-bars{
-    font-size: 25px;
-}
-a.bars{
-    display: none;
-}
-.fa-brands:hover{
-    color: var(--main-orange);
-    cursor: pointer;
-}
-.btn{
-    color: var(--white);
-    background-color: var(--main-orange);
-    font-family: Rubik, sans-serif;
-    padding: 10px 20px;
-    border: 1px solid var(--main-orange);
-}
-.btn:hover{
-    cursor: pointer;
-}
-.halved__btn{
-    padding: 10px 20px;
-    white-space: nowrap;
-    background-color: #22252C;
-    border: 0;
-    color: white;
-    font-size: 15px;
-    font-weight: var(--regular-weight);
-    cursor:pointer;
-    transition: .5s width ease;
-    letter-spacing: 3px;
-    font-family: Teko, sans-serif;
-}
-nav, div.hero, div.about__me, 
-div.my__skills, div.my_projects, 
-div.my__services, div.blogs__and__articles{
-    padding: 0 115px;
-}
-
-div.halved__button{
-    width: fit-content;
-    height: fit-content;
-    padding: 10px;
-}
-div.halved__button p{
-    margin: 0;
-}
-div.halved__button .bg__div{
-    background-color: #b2c4ec;    
-    width: 100%;
-    height: 100%;
-}
-
-
+@import url('./global.css');
 
 /* Main headings */
 .main__heading{
@@ -105,20 +19,8 @@ div.halved__button .bg__div{
     height: 1px;
 }
 
-/* Styles for navbar */
+/* Sytles for nav */
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 40px;
-}
-div.links{
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 a.login{
     border: 1px solid var(--main-orange);
     padding: 5px 20px;
@@ -363,6 +265,7 @@ div.service h2{
 }
 
 /* Styles for blogs and articles */
+
 div.blogs__and__articles{
     padding: 40px 115px;
 }
@@ -402,6 +305,7 @@ button.read__story:hover{
 }
 
 /* Styles for get in touch section */
+
 div.contact{
     padding: 40px 115px;
     background-color: #14171E;
@@ -443,41 +347,9 @@ button.send__message:hover{
     width: 135px;
 }
 
-/* Styles for footer */
-
-footer{
-    padding: 40px 115px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-div.footer__icons{
-    display: flex;
-}
-div.icon__container{
-    margin-right: 1.5rem;
-    width: 30px;
-    height: 30px;
-    margin-bottom: 1.5rem;
-}
-div.icon__container i{
-    color: var(--white);
-    font-size: 14px;
-}
-footer span{
-    font-size: 15px;
-    font-family: Teko, sans-serif;
-    letter-spacing: 2px;
-}
-
 @media only screen and (max-width: 430px) {
-    div.links{
-        display: none;
-    }
-    a.bars{
-        display: block;
-    }
-    nav, div.hero, div.about__me, div.my__skills, div.my_projects, div.my__services{
+    div.hero, div.about__me, 
+    div.my__skills, div.my_projects, div.my__services{
         padding: 0 30px;
     }
     div.hero{
@@ -578,9 +450,5 @@ footer span{
     }
     div.short__input{
         width: 100%;
-    }
-    footer span{
-        width: 100vw;
-        text-align: center;
     }
 }
