--- a/css/global.css
+++ b/css/global.css
@@ -33,8 +33,6 @@ a:hover{
 }
 .fa-bars{
     font-size: 25px;
-}
-a.bars{
     display: none;
 }
 .fa-brands:hover{
@@ -96,6 +94,43 @@ div.links{
     align-items: center;
 }
 
+/* Styles for blogs and articles */
+
+div.blogs{
+    margin-top: 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+div.blog{
+    width: 28%;
+    background-color: var(--secondary-black);
+    border-radius: 5px;
+}
+div.blog img{
+    width: 100%;
+}
+div.blog__text{
+    padding: 1rem;
+}
+div.blog__text h2{
+    font-size: 18px;
+    font-size: var(--regular-weight);
+    margin-bottom: 1rem;
+}
+div.blog__text p{
+    color: var(--gray-text);
+    font-size: 15px;
+    margin-bottom: 1.5rem;
+}
+button.read__story{
+    width: 70px;
+    padding: 5px 10px;
+
+}
+button.read__story:hover{
+    width: 120px;
+}
+
 /* Styles for footer */
 
 footer{
@@ -127,8 +162,9 @@ footer span{
     div.links{
         display: none;
     }
-    a.bars{
+    .fa-bars{
         display: block;
+        cursor: pointer;
     }
     footer span{
         width: 100vw;
@@ -136,5 +172,9 @@ footer span{
     }
     nav{
         padding: 0 30px;
+    }
+    div.blog{
+        width: 100%;
+        margin-bottom: 1rem;
     }
 }
