--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -206,6 +206,69 @@ div.blogs__page__blogs{
     width: 30%;
 }
 
+/* Create Blog Styles */
+
+form{
+    display: flex;
+    justify-content: space-between;
+}
+form section{
+    background-color: #14171E;
+    padding: 2rem;
+    border-radius: 10px;
+}
+.section__one{
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+}
+.section__one input[type=text], textarea{
+    background-color: transparent;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #6C7175;
+    color: #6C7175;
+    font-size: 16px;
+    padding: 0 10px ;
+    margin-bottom: 1rem;
+}
+textarea{
+    padding: 10px;
+    letter-spacing: 0;
+    height: 100px;
+
+}
+form input:focus{
+    outline: 1px solid white;
+}
+label{
+    color: #6C7175;
+    margin-bottom: .5rem;
+}
+.section__two{
+    width: 25%;
+    height: fit-content;
+}
+.section__two div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.section__two label{
+    color: white;
+}
+.section__two button{
+    background-color: var(--main-orange);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    font-weight: var(--semi-bold);
+    margin-top: 1rem;
+    width: 50%;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 430px) {
     div.sidebar{
         width: 50%;
@@ -265,5 +328,20 @@ div.blogs__page__blogs{
     }
     .blogs__page__blogs .blog{
         width: 100%;
+    }
+
+    /* New Blog page styles */
+    form{
+        flex-direction: column;
+        align-items: center;
+    }
+    form section{
+        padding: 1rem;
+    }
+    .section__one, .section__two{
+        width: 100%;
+    }
+    .section__two{
+        margin-top: 1rem;
     }
 }
