--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,11 @@ body{
     font-family: Rubik, sans-serif;
     color: var(--white);
 }
+span.error{
+    color: red;
+    font-size: 14px;
+    margin-bottom: .5rem;
+}
 a{
     text-decoration: none;
     color: white;
